added ordered and unordered lists

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
 .unordered-list{
     margin-left: 80px;
 }
+
+.ordered-list{
+    margin-left: 80px;
+}
 .exit{
     display: flex;
     justify-content: right;
